hphp/hack/test/typecheck/xhp/required_attr/override.php.legacy_decl.exp
File "override.php", line 6, characters 38-40:
Redeclared attribute must not be less strict (Typing[4315])
File "override.php", line 4, characters 38-40:
The attribute is required, which is stricter than lateinit
File "override.php", line 7, characters 38-40:
Redeclared attribute must not be less strict (Typing[4315])
File "override.php", line 4, characters 38-40:
The attribute is required, which is stricter than not required or lateinit
File "override.php", line 12, characters 38-40:
Redeclared attribute must not be less strict (Typing[4315])
File "override.php", line 9, characters 38-40:
The attribute is lateinit, which is stricter than not required or lateinit
File "override.php", line 15, characters 38-40:
Member :a has the wrong type (Typing[4341])
File "override.php", line 15, characters 38-40:
Typing error
File "override.php", line 15, characters 38-40:
Expected int
File "override.php", line 14, characters 38-40:
But got ?int
File "override.php", line 16, characters 38-40:
Member :a has the wrong type (Typing[4341])
File "override.php", line 16, characters 38-40:
Typing error
File "override.php", line 16, characters 38-40:
Expected int
File "override.php", line 14, characters 38-40:
But got ?int
